--- a/src/main/resources/templates/listemployee.html
+++ b/src/main/resources/templates/listemployee.html
@@ -68,12 +68,12 @@
 						<td th:text="${aEmployee.lastName}"/>
 						<td th:text="${aEmployee.email}"/>
 						<td>
-							<a th:href="@{/employees/update(id=${aEmployee.employeeId})}"
+							<a th:href="@{/update(id=${aEmployee.employeeId})}"
 								class="btn btn-info btn-sm">
 								Update
 							</a>
 							
-							<a th:href="@{/employees/delete(id=${aEmployee.employeeId})}"
+							<a th:href="@{/delete(id=${aEmployee.employeeId})}"
 								class="btn btn-danger btn-sm"
 								onClick="if (!(confirm('Are you sure you want to delete this employee?'))) return false">
 								Delete
