--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,13 +28,13 @@
       
       </li>
       <li class="nav-item">
-        <a class="nav-link "href="http://localhost:8080">Home</a>
+        <a class="nav-link "href="http://https://springprojectmanagementapp.herokuapp.com">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="http://localhost:8080/listemployee">Employees</a>
+        <a class="nav-link " href="http://https://springprojectmanagementapp.herokuapp.com/listemployee">Employees</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link "href="http://localhost:8080/projects">Projects</a>
+        <a class="nav-link "href="http://https://springprojectmanagementapp.herokuapp.com/projects">Projects</a>
       </li>
     </ul>
    
