--- a/src/main/resources/templates/newproject.html
+++ b/src/main/resources/templates/newproject.html
@@ -14,8 +14,6 @@
 </head>
 
 <body>
-
-
 <nav th:fragment = "layout"class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Projects IO</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,13 +28,13 @@
       
       </li>
       <li class="nav-item">
-        <a class="nav-link "href="http://localhost:8080">Home</a>
+        <a class="nav-link "href="http://https://springprojectmanagementapp.herokuapp.com">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="http://localhost:8080/listemployee">Employees</a>
+        <a class="nav-link " href="http://https://springprojectmanagementapp.herokuapp.com/listemployee">Employees</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link "href="http://localhost:8080/projects">Projects</a>
+        <a class="nav-link "href="http://https://springprojectmanagementapp.herokuapp.com/projects">Projects</a>
       </li>
     </ul>
    
