--- a/src/main/resources/templates/newemployee.html
+++ b/src/main/resources/templates/newemployee.html
@@ -27,13 +27,13 @@
       
       </li>
       <li class="nav-item">
-        <a class="nav-link "href="http://https://springprojectmanagementapp.herokuapp.com">Home</a>
+        <a class="nav-link "href="http://springprojectmanagementapp.herokuapp.com">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="http://https://springprojectmanagementapp.herokuapp.com/listemployee">Employees</a>
+        <a class="nav-link " href="http://springprojectmanagementapp.herokuapp.com/listemployee">Employees</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link "href="http://https://springprojectmanagementapp.herokuapp.com/projects">Projects</a>
+        <a class="nav-link "href="http://springprojectmanagementapp.herokuapp.com/projects">Projects</a>
       </li>
     </ul>
    
